--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-nleqslv
-url = https://cran.r-project.org/src/contrib/nleqslv_3.3.4.tar.gz
+url = https://cran.r-project.org/src/contrib/nleqslv_3.3.5.tar.gz
 archives = 
 giturl = 
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
